# Homework_2

homeworks_2/: CMakeLists.txt  back.cpp  front.cpp  insert.cpp  pop_back.cpp  pop_front.cpp  push_back.cpp  push_front.cpp  remove.cpp
