cmake_minimum_required(VERSION 3.27)
project(untitled3)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled1 front.cpp)
add_executable(untitled2 back.cpp)
add_executable(untitled3 push_front.cpp)
add_executable(untitled4 push_back.cpp)
add_executable(untitled5 pop_front.cpp)
add_executable(untitled6 pop_back.cpp)
add_executable(untitled7 insert.cpp)
add_executable(untitled8 main_8.cpp)

